# badge-hackgdl-2025

./: .gitignore  README.md
case/: LID.stl  (+5 more)
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
firmware/main/apps/about/: about.c  about.h
firmware/main/apps/neopixel/: neopixel_app.c  neopixel_app.h
firmware/main/apps/tamagotchi/: tama_app.c  tama_app.h
firmware/main/drivers/oled_driver/: font8x8_basic.h  oled_driver.c  oled_driver.h  oled_driver_i2c.c  oled_driver_spi.c
firmware/main/entities/: animation_t.h  bitmap_t.h  chiptune_t.h  neopixels_t.h  rgb_color_t.h
firmware/main/general/: bitmaps_general.h  general_screens.c  general_screens.h
firmware/main/general/general_knob/: general_knob.c  general_knob.h
firmware/main/general/general_notification/: general_notification.c  general_notification.h
firmware/main/general/general_radio_selection/: general_radio_selection.c  general_radio_selection.h
firmware/main/general/general_scrolling_text/: general_scrolling_text.c  general_scrolling_text.h
firmware/main/general/general_submenu/: general_submenu.c  general_submenu.h
firmware/main/gui/widgets/: knob_rect.c  knob_rect.h
firmware/main/modules/animations_module/: animations_module.c  animations_module.h
firmware/main/modules/animations_task/: animations_task.c  animations_task.h
firmware/main/modules/coroutine/: coroutine.c  coroutine.h
firmware/main/modules/display_module/: display_module.c  display_module.h
firmware/main/modules/file_manager/: file_manager_module.c  file_manager_module.h  file_manager_screens.c  (+1 more)
(+209 files in other folders)
